objects/Opportunity_Server_deployment__c/Opportunity_Server_deployment__c.object-meta.xml
<CustomObject>
    <description>Junction object between Opportunity &amp; Server Deployment</description>
    <label>Opportunity Server deployment</label>
    <nameField>
        <displayFormat>OSD-{000000000}</displayFormat>
        <label>Opportunity Server deployment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Server Deployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>