objects/Opportunity_Server_deployment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Server Deployments</relationshipLabel>
    <relationshipName>Opportunity_Server_Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>