objects/Opportunity_Server_deployment__c/fields/ELV_AllocationQuantity__c.field-meta.xml
<CustomField>
    <fullName>ELV_AllocationQuantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The amount that the Account Team has allocated for this Opportunity Server Deployment. The full Quantity of Usage/License must be allocated before an Opportunity can move to &apos;Signed - Paperwork Received&apos;. Used in the &apos;Manage Allocation&apos; screen on the Opportunity. SS-13898</description>
    <inlineHelpText>The amount that the Account Team has allocated for this Opportunity Server Deployment. The full Quantity of Usage/License must be allocated before an Opportunity can move to &apos;Signed - Paperwork Received&apos;. Used in the &apos;Manage Allocation&apos; screen on the Opportunity.</inlineHelpText>
    <label>Allocation Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>