objects/Opportunity_Server_deployment__c/fields/ELV_EndDate__c.field-meta.xml
<CustomField>
    <fullName>ELV_EndDate__c</fullName>
    <description>The End Date from the related Quote Line. Used in the &apos;Manage Allocation&apos; screen on the Opportunity. SS-13898</description>
    <formula>ELV_QuoteLineItem__r.Ruby__SubscriptionEndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The End Date from the related Quote Line. Used in the &apos;Manage Allocation&apos; screen on the Opportunity.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>