objects/Opportunity_Server_deployment__c/fields/ELV_Quantity__c.field-meta.xml
<CustomField>
    <fullName>ELV_Quantity__c</fullName>
    <description>The Quantity from the Quote Line that needs to be allocated. This value will vary depending on if the Line Item is Usage or not. Used in the &apos;Manage Allocation&apos; screen on the Opportunity. SS-13898</description>
    <formula>ELV_QuoteLineItem__r.ELV_Opp_Server_Deployment_Quantity__c</formula>
    <inlineHelpText>The Quantity from the Quote Line that needs to be allocated. This value will vary depending on if the Line Item is Usage or not. Used in the &apos;Manage Allocation&apos; screen on the Opportunity.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>