objects/Opportunity_Server_deployment__c/fields/ELV_QuoteLineItem__c.field-meta.xml
<CustomField>
    <fullName>ELV_QuoteLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Quote Line record this allocation is related to. This field will always be populated from the Manage Allocations screen on the Opportunity. SS-13898</description>
    <inlineHelpText>The Quote Line record this allocation is related to. This field will always be populated from the Manage Allocations screen on the Opportunity.</inlineHelpText>
    <label>Quote Line</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Opportunity Server Deployments (Quote Line)</relationshipLabel>
    <relationshipName>Opportunity_Server_Deployments1</relationshipName>
    <type>Lookup</type>
</CustomField>