objects/Opportunity_Server_deployment__c/fields/ELV_StartDate__c.field-meta.xml
<CustomField>
    <fullName>ELV_StartDate__c</fullName>
    <description>The Start Date from the related Quote Line. Used in the &apos;Manage Allocation&apos; screen on the Opportunity. SS-13898</description>
    <formula>ELV_QuoteLineItem__r.Ruby__SubscriptionStartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Start Date from the related Quote Line. Used in the &apos;Manage Allocation&apos; screen on the Opportunity.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>