objects/Opportunity_Server_deployment__c/fields/ELV_Type__c.field-meta.xml
<CustomField>
    <fullName>ELV_Type__c</fullName>
    <description>Differentiates License and Usage allocation items. Used in the &apos;Manage Allocation&apos; screen on the Opportunity. SS-13898</description>
    <formula>ELV_QuoteLineItem__r.ELV_Opportunity_Server_Deployment_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Differentiates License and Usage allocation items. Used in the &apos;Manage Allocation&apos; screen on the Opportunity.</inlineHelpText>
    <label>Type</label>
    <type>Text</type>
</CustomField>