objects/Opportunity_Server_deployment__c/fields/ELV_UsagePeriod__c.field-meta.xml
<CustomField>
    <fullName>ELV_UsagePeriod__c</fullName>
    <description>The usage period for usage line items. Used in the &apos;Manage Allocation&apos; screen on the Opportunity. SS-13898</description>
    <formula>TEXT(ELV_QuoteLineItem__r.ELV_UsagePeriod__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The usage period for usage line items. Used in the &apos;Manage Allocation&apos; screen on the Opportunity.</inlineHelpText>
    <label>Usage Period</label>
    <type>Text</type>
</CustomField>