objects/Opportunity_Server_deployment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity associated with Server Deployment</description>
    <inlineHelpText>Opportunity associated with Server Deployment</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Server Deployments</relationshipLabel>
    <relationshipName>Opportunity_Server_Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>