objects/Opportunity_Server_deployment__c/fields/Opportunity_Account_id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Account_id__c</fullName>
    <description>Opportunity Account Id</description>
    <formula>Opportunity__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Opportunity Account Id</inlineHelpText>
    <label>Opportunity Account id</label>
    <type>Text</type>
</CustomField>