objects/Opportunity_Server_deployment__c/fields/Opportunity_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Account_Name__c</fullName>
    <description>Opportunity Account Name</description>
    <formula>Opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Opportunity Account Name</inlineHelpText>
    <label>Opportunity Account Name</label>
    <type>Text</type>
</CustomField>