objects/Opportunity_Server_deployment__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <description>Formula to populate the Opportunity Stage</description>
    <formula>TEXT(Opportunity__r.StageName)</formula>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>