objects/Opportunity_Server_deployment__c/fields/Server_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Server_Deployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Server Deployment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Server_Deployment__c.Account__r.Active_Account__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Server_Deployment__c.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Server_Deployment__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Server_Deployment__c</referenceTo>
    <relationshipLabel>Opportunity</relationshipLabel>
    <relationshipName>Opportunity_Server_Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>