objects/Opportunity_Server_deployment__c/fields/Server_Deployment_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Server_Deployment_Account_Id__c</fullName>
    <description>Account Id of Server Deployment record</description>
    <formula>Server_Deployment__r.Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account Id of Server Deployment record</inlineHelpText>
    <label>Server Deployment Account Id</label>
    <type>Text</type>
</CustomField>