objects/Opportunity_Server_deployment__c/fields/Server_Deployment_Type__c.field-meta.xml
<CustomField>
    <fullName>Server_Deployment_Type__c</fullName>
    <description>Server Deployment Type populated via flow</description>
    <label>Server Deployment Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>