objects/Opportunity_Server_deployment__c/validationRules/Account_Diff.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Diff</fullName>
    <active>false</active>
    <description>Server deployment Account different from Opportunity Account</description>
    <errorConditionFormula>CASESAFEID(Opportunity_Account_id__c) &lt;&gt; CASESAFEID(Server_Deployment_Account_Id__c)</errorConditionFormula>
    <errorMessage>Server deployment Account is different from Opportunity Account, please select  Server deployment linked to Opportunity Account</errorMessage>
</ValidationRule>