objects/Opportunity_Server_deployment__c/validationRules/End_User_Account_does_not_match.validationRule-meta.xml
<ValidationRule>
    <fullName>End_User_Account_does_not_match</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
 Opportunity__r.Pricebook2Id == &apos;01s7V000000NyMZ&apos;,
   Server_Deployment__r.MSSP_End_User_Account__r.Id  &lt;&gt;  
  Opportunity__r.End_User_Account__r.Id ,

 Opportunity__r.Has_Remote_Screen_Share_MSP__c == FALSE
)</errorConditionFormula>
    <errorMessage>For MSP opportunities, the End User field on Server Deployments need to match the End User Account on the opportunity. Please update the record on the account and then reassign on the Opportunity</errorMessage>
</ValidationRule>