objects/Opportunity_Server_deployment__c/validationRules/End_User_Required_for_MSSP_Deals.validationRule-meta.xml
<ValidationRule>
    <fullName>End_User_Required_for_MSSP_Deals</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
 Opportunity__r.Pricebook2Id == &apos;01s7V000000NyMZ&apos;,
 ISBLANK( Server_Deployment__r.MSSP_End_User_Account__c )
)</errorConditionFormula>
    <errorMessage>For MSP opportunities, the End User field is required on Server Deployments. Please update the record on the account and then reassign on the Opportunity.</errorMessage>
</ValidationRule>